fix: scale down z-axis of multiple elements to preent covering flyout

--- a/src/rocm_docs/rocm_docs_theme/static/custom.css
+++ b/src/rocm_docs/rocm_docs_theme/static/custom.css
@@ -99,7 +99,7 @@ div#rdc-watermark-container {
   width: 100vw;
   top: 0;
   left: 0;
-  z-index: 10000;
+  z-index: 2000;
 }
 
 img#rdc-watermark {
@@ -110,7 +110,7 @@ img#rdc-watermark {
   transform-origin: center;
   transform: translate(-50%, -50%) rotate(-45deg);
   opacity: 10%;
-  z-index: 10000;
+  z-index: 2000;
   max-width: 100%;
   max-height: calc(100% - 200px);
   object-fit: contain;
@@ -221,7 +221,7 @@ a#ot-sdk-btn {
 }
 
 .bd-sidebar-secondary {
-  z-index: 2000;
+  z-index: 2001;
 }
 
 .sd-card-body.rocm-card-banner {
